--- a/templates/homeInvitado/productos.html
+++ b/templates/homeInvitado/productos.html
@@ -18,16 +18,19 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Portada</a>
+            <a class="nav-link" href="index.html">Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Acerca de</a>
+            <a class="nav-link" href="acerca.html">Acerca de</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portfolio.html">Portafolio</a>
+            <a class="nav-link" href="contactos.html">Contactos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contacto</a>
+            <a class="nav-link" href="productos.html">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="servicios.html">Servicios</a>
           </li>
         </ul>
       </div>
@@ -46,6 +49,77 @@
         </div>
       </div>
     </div>
+    <section class="ProductsSection">
+        <main class="mainDestacados">
+          <h2>Catalogo deproductos</h2>
+          <section class="containerProdutos">
+            <div class="produto">
+                <img src="images/Novidades/Novidade1.jpg" alt="" class="produto__img">
+              <div class="productDescription">
+                <h3 class="produto__title">Novidade 1</h3>
+                <spam class="produto__price">$90.00</spam>
+              </div>
+              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+            </div>
+            <div class="produto">
+                <img src="images/Novidades/Novidade2.jpg" alt="" class="produto__img">
+              <div class="productDescription">
+                <h3 class="produto__title">Novidade 2</h3>
+                <spam class="produto__price">$90.00</spam>
+              </div>
+              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+            </div>
+            <div class="produto">
+                <img src="images/Novidades/Novidade3.jpg" alt="" class="produto__img">
+              <div class="productDescription">
+                <h3 class="produto__title">Novidade 3</h3>
+                <spam class="produto__price">$90.00</spam>
+              </div>
+              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+            </div>
+            <div class="produto">
+                <img src="images/Novidades/Novidade4.jpg" alt="" class="produto__img">
+             <div class="productDescription">
+              <h3 class="produto__title">Novidade 4</h3>
+              <spam class="produto__price">$90.00</spam>
+              </div>
+              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+            </div>
+            <div class="produto">
+              <img src="images/Novidades/Novidade5.jpg" alt="" class="produto__img">
+            <div class="productDescription">
+              <h3 class="produto__title">Novidade 5</h3>
+              <spam class="produto__price">$90.00</spam>
+            </div>
+            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+          </div>
+          <div class="produto">
+              <img src="images/Novidades/Novidade6.jpg" alt="" class="produto__img">
+            <div class="productDescription">
+              <h3 class="produto__title">Novidade 6</h3>
+              <spam class="produto__price">$90.00</spam>
+            </div>
+            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+          </div>
+          <div class="produto">
+              <img src="images/Novidades/Novidade7.jpg" alt="" class="produto__img">
+            <div class="productDescription">
+              <h3 class="produto__title">Novidade 7</h3>
+              <spam class="produto__price">$90.00</spam>
+            </div>
+            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+          </div>
+          <div class="produto">
+              <img src="images/Novidades/Novidade8.jpg" alt="" class="produto__img">
+           <div class="productDescription">
+              <h3 class="produto__title">Novidade 8</h3>
+              <spam class="produto__price">$90.00</spam>
+            </div>
+            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
+          </div>
+          </section>
+        </main>
+      </section>
   </header>
     
 </body>
