--- a/templates/homeInvitado/index.html
+++ b/templates/homeInvitado/index.html
@@ -9,20 +9,72 @@
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dongle:wght@400;700&family=Grape+Nuts&family=Indie+Flower&family=Permanent+Marker&family=Roboto+Flex:opsz,
+    wght@8..144,200;8..144,400;8..144,600;8..144,900;8..144,1000&family=Roboto+Slab:wght@300;400;800&family=Roboto:wght@300&family=Rubik:ital,wght@0,300;0,600;1,800&family=Secular+One&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/clean-blog.min.css" rel="stylesheet">
 
+    <style>
+
+      *{
+         margin: 0;
+         padding: 0;
+         box-sizing: border-box;
+      }
+
+      header{
+        
+
+        background-color: #f5f3ee;
+      }
+
+      #logo{
+        margin: auto;
+        height: 250px;
+        width: 320px;
+        text-align: center;
+      }
+
+      #logo h1{
+         font-family: 'Dongle';
+         font-size: 58px;
+       }
+
+     nav ul{
+        list-style: none;
+        display: inline-block;
+        padding:18px;
+     }
+
+     nav ul li{
+         float: left;
+         margin-top: 20px;
+     }
+
+     nav ul li a {
+         color: rgb(5, 4, 0);
+         font-weight: bold;
+         text-decoration: none;
+         font-size: 20px;
+         padding: 18px;
+         border: 2px solid rgb(0, 183, 255);
+         border-radius: 5px;
+       
+
+     }
+
+     nav ul li a:hover{
+       background-color: #6c93ce;
+     }
+
+   </style>
     
 </head>
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
-        <div class="container">
-          <a class="navbar-brand" href="index.html">Veteria Victor's</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menú
-            <i class="fa fa-bars"></i>
-          </button>
+       
+        
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
@@ -37,7 +89,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="productos.html">Productos</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item ">
                 <a class="nav-link" href="servicios.html">Servicios</a>
               </li>
             </ul>
@@ -45,7 +97,9 @@
         </div>
       </nav>
 
-      <header class="masthead" style="background-image: url('img/home-bg.jpg')">
+      <header>
+        <div id="logo">
+          <img src="https://drive.google.com/file/d/116VX2qOtQtkrvVzulsS7ZawhmtiH_hWW/view" alt="veterinaria">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
@@ -59,6 +113,19 @@
         </div>
       </header>
       
+      <section class="acerca-de">
+        <div class="contenedor">
+            <div class="texto">
+                <h3 id="acerca-de" class="titulo">Acerca de</h3>
+                <p>En <span class="bold">Veterinaria Victor's</span> nos preocupamos por el bienestar de 
+                  sus mascotas asi como animales de granja,
+                   siendo nuestra prioridad el poder brindar un buen 
+                   servicio a nuestros pacientes como a sus propietarios.</p>
+            </div>
+        </div>
+    </section>
+
+
       <footer>
         <div class="container">
           <div class="row">
