Dios iluminane o eliminame2.0

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -41,6 +41,7 @@ nav ul li a {
     padding: 18px;
     border: 2px solid rgb(0, 183, 255);
     border-radius: 5px;
+    text-align: right;
   
 
 }
