--- a/templates/homeInvitado/index.html
+++ b/templates/homeInvitado/index.html
@@ -24,8 +24,10 @@
 
       header{
         
-
+        background-image: url('../img/logo.jpg');
         background-color: #f5f3ee;
+        position: relative;
+        height: 300px
       }
 
       #logo{
@@ -38,6 +40,7 @@
       #logo h1{
          font-family: 'Dongle';
          font-size: 58px;
+         text-align: center;
        }
 
      nav ul{
@@ -57,14 +60,17 @@
          text-decoration: none;
          font-size: 20px;
          padding: 18px;
-         border: 2px solid rgb(0, 183, 255);
-         border-radius: 5px;
+         text-align: right;
+        
        
 
      }
 
      nav ul li a:hover{
-       background-color: #6c93ce;
+       background-color: #97e1f8;
+       border: 2px solid #97e1f8; 
+       border-radius: 5px;
+       text-align: right;
      }
 
    </style>
@@ -99,13 +105,13 @@
 
       <header>
         <div id="logo">
-          <img src="https://drive.google.com/file/d/116VX2qOtQtkrvVzulsS7ZawhmtiH_hWW/view" alt="veterinaria">
+          <img src="vet" url="../img" alt="veterinaria">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
             <div class="col-lg-8 col-md-10 mx-auto">
               <div class="site-heading">
-                <h1>Veteria Victor's</h1>
+                <h1>Veterinaria Victor's</h1>
                 <span class="subheading">Comprometidos con la salud y bienestar de los pacientes</span>
               </div>
             </div>
