--- a/templates/homeInvitado/index.html
+++ b/templates/homeInvitado/index.html
@@ -13,6 +13,7 @@
     wght@8..144,200;8..144,400;8..144,600;8..144,900;8..144,1000&family=Roboto+Slab:wght@300;400;800&family=Roboto:wght@300&family=Rubik:ital,wght@0,300;0,600;1,800&family=Secular+One&display=swap" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/clean-blog.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="static">
 
     <style>
 
@@ -130,6 +131,44 @@
             </div>
         </div>
     </section>
+
+    <section class="descripcion">
+      <div class="contenedor">
+        <div class="texto">
+          <h3 id="descripcion" class="titulo">Nuestros servicios</h3>
+            <figure class="icon-cards mt-3">
+            <div class="icon-cards__content">
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Clínica</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Cirugía</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Consultas</span></div>
+              <div class="icon-cards__item d-flex align-items-center justify-content-center"><span class="h1">Venta de medicamentos y accesorios</span></div>
+            </div>
+          </figure>
+          
+          <div class="checkbox">
+            <input class="d-none" id="toggle-animation" type="checkbox" checked />
+            <label class="checkbox__checkbox" for="toggle-animation"></label>
+            <label class="checkbox__label" for="toggle-animation">Toggle animation</label>
+          </div>
+          
+
+
+
+        </div>
+
+      </div>
+
+    </section>
+
+    <section class="redes-sociales">
+      <div class="contenedor">
+          <a class="twitter" href="http://www.twitter.com/falconmasters"><i class="fa fa-twitter"></i> </a>
+          <a class="facebook" href="http://www.facebook.com/falconmasters"><i class="fa fa-facebook"></i></a>
+          <a class="instagram" href="http://www.instagram.com/falconmasters"><i class="fa fa-instagram"></i>
+          </a>
+          <a class="github" href="https://mail.google.com/mail/u/3/?pli=1#inbox""><i class=" fa fa-gmail"></i> </a>
+      </div>
+  </section>
 
 
       <footer>
