--- a/templates/homeInvitado/index.html
+++ b/templates/homeInvitado/index.html
@@ -14,67 +14,8 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href="css/clean-blog.min.css" rel="stylesheet">
     <link rel="stylesheet" href="static">
-
-    <style>
-
-      *{
-         margin: 0;
-         padding: 0;
-         box-sizing: border-box;
-      }
-
-      header{
-        
-        background-image: url('../img/logo.jpg');
-        background-color: #f5f3ee;
-        position: relative;
-        height: 300px
-      }
-
-      #logo{
-        margin: auto;
-        height: 250px;
-        width: 320px;
-        text-align: center;
-      }
-
-      #logo h1{
-         font-family: 'Dongle';
-         font-size: 58px;
-         text-align: center;
-       }
-
-     nav ul{
-        list-style: none;
-        display: inline-block;
-        padding:18px;
-     }
-
-     nav ul li{
-         float: left;
-         margin-top: 20px;
-     }
-
-     nav ul li a {
-         color: rgb(5, 4, 0);
-         font-weight: bold;
-         text-decoration: none;
-         font-size: 20px;
-         padding: 18px;
-         text-align: right;
-        
-       
-
-     }
-
-     nav ul li a:hover{
-       background-color: #97e1f8;
-       border: 2px solid #97e1f8; 
-       border-radius: 5px;
-       text-align: right;
-     }
-
-   </style>
+    <link rel="stylesheet" href="../../static/css/style.css">
+    <link rel="stylesheet" href="../../static/css/img">
     
 </head>
 <body>
