--- a/templates/homeInvitado/productos.html
+++ b/templates/homeInvitado/productos.html
@@ -125,7 +125,7 @@
           <section class="containerProdutos">
             <div class="produto">
               <div class="w3-card-12 w3-margin" style="width:50%">
-                <img src="img/ferrajet-hierro-vitaminas-minerales.jpg" alt="Norway" style="width:100%">
+                <img src="../../static/css/img/ferrajet-hierro-vitaminas-minerales.jpg" alt="Norway" style="width:100%">
                 <div class="w3-container w3-center">
                   <p>Ferrajet 50 ml</p>
                 </div>
@@ -133,7 +133,7 @@
 
               <div class="produto">
                 <div class="w3-card-12 w3-margin" style="width:50%">
-                  <img src="img/dexa-estreptovet.jpg" alt="Norway" style="width:100%">
+                  <img src="../../static/css/img/dexa-estreptovet.jpg" alt="Norway" style="width:100%">
                   <div class="w3-container w3-center">
                     <p>Dexa-estreptovet</p>
                   </div>
