--- a/templates/homeInvitado/servicios.html
+++ b/templates/homeInvitado/servicios.html
@@ -11,17 +11,10 @@
    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
     <div class="container2">
       <a class="produc" href="servicios.html">Servicios</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        Menú
-        <i class="fa fa-bars"></i>
-      </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="index.html">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="acerca.html">Acerca de</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="contactos.html">Contactos</a>
@@ -122,5 +115,52 @@
       </section>
   </header>
     
+
+  <section class="redes-sociales">
+    <div class="contenedor">
+        <a class="twitter" href="http://www.twitter.com/falconmasters"><i class="fa fa-twitter"></i> </a>
+        <a class="facebook" href="http://www.facebook.com/falconmasters"><i class="fa fa-facebook"></i></a>
+        <a class="instagram" href="http://www.instagram.com/falconmasters"><i class="fa fa-instagram"></i>
+        </a>
+        <a class="github" href="https://mail.google.com/mail/u/3/?pli=1#inbox""><i class=" fa fa-gmail"></i> </a>
+    </div>
+</section>
+
+
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8 col-md-10 mx-auto">
+            <ul class="list-inline text-center">
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-whatsapp fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="#">
+                  <span class="fa-stack fa-lg">
+                    <i class="fa fa-circle fa-stack-2x"></i>
+                    <i class="fa fa-gmail fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <p class="copyright text-muted">Copyright &copy; 2022 ·Las Reales (UTT) </p>
+          </div>
+        </div>
+      </div>
+    </footer>
 </body>
 </html>
