--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,52 +1,57 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
- }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
- header{
-   
+header{
+ 
+ background-image: url('../img/logo.jpg');
+ background-color: #f5f3ee;
+ position: relative;
+ height: 300px
+}
 
-   background-color: #f5f3ee;
- }
+#logo{
+ margin: auto;
+ height: 250px;
+ width: 320px;
+ text-align: center;
+}
 
- #logo{
-   margin: auto;
-   height: 250px;
-   width: 320px;
-   text-align: center;
- }
-
- #logo h1{
-    font-family: 'Dongle';
-    font-size: 58px;
-  }
+#logo h1{
+  font-family: 'Dongle';
+  font-size: 58px;
+  text-align: center;
+}
 
 nav ul{
-   list-style: none;
-   display: inline-block;
-   padding:18px;
+ list-style: none;
+ display: inline-block;
+ padding:18px;
 }
 
 nav ul li{
-    float: left;
-    margin-top: 20px;
+  float: left;
+  margin-top: 20px;
 }
 
 nav ul li a {
-    color: rgb(5, 4, 0);
-    font-weight: bold;
-    text-decoration: none;
-    font-size: 20px;
-    padding: 18px;
-    border: 2px solid rgb(0, 183, 255);
-    border-radius: 5px;
-    text-align: right;
-  
+  color: rgb(5, 4, 0);
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 20px;
+  padding: 18px;
+  text-align: right;
+ 
+
 
 }
 
 nav ul li a:hover{
-  background-color: #6c93ce;
+background-color: #97e1f8;
+border: 2px solid #97e1f8; 
+border-radius: 5px;
+text-align: right;
 }
 
