--- a/templates/homeInvitado/contactos.html
+++ b/templates/homeInvitado/contactos.html
@@ -12,17 +12,10 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
         <div class="container3">
           <a class="produc" href="contactos.html">Contactos</a>
-          <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-            Menú
-            <i class="fa fa-bars"></i>
-          </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
               <li class="nav-item">
                 <a class="nav-link" href="index.html">Inicio</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="acerca.html">Acerca de</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contactos.html">Contactos</a>
@@ -38,7 +31,7 @@
         </div>
       </nav>
 
-      <header class="produc" style="background-image: url('img/home-bg.jpg')">
+      <header class="produc" style="background-image: url('../../static/css/img/logo.jpg')">
         <div class="overlay1"></div>
         <div class="container2">
           <div class="row">
