--- a/templates/homeInvitado/servicios.html
+++ b/templates/homeInvitado/servicios.html
@@ -5,6 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
+
+    <style>
+
+      *{
+         margin: 0;
+         padding: 0;
+         box-sizing: border-box;
+      }
+
+      header{
+        
+        background-image: url('../img/logo.jpg');
+        background-color: #f5f3ee;
+        position: relative;
+        height: 300px
+      }
+
+      #logo{
+        margin: auto;
+        height: 250px;
+        width: 320px;
+        text-align: center;
+      }
+
+      #logo h1{
+         font-family: 'Dongle';
+         font-size: 58px;
+         text-align: left;
+       }
+
+     nav ul{
+        list-style: none;
+        display: inline-block;
+        padding:18px;
+     }
+
+     nav ul li{
+         float: left;
+         margin-top: 20px;
+     }
+
+     nav ul li a {
+         color: rgb(5, 4, 0);
+         font-weight: bold;
+         text-decoration: none;
+         font-size: 20px;
+         padding: 18px;
+         text-align: right;
+        
+       
+
+     }
+
+     nav ul li a:hover{
+       background-color: #97e1f8;
+       border: 2px solid #97e1f8; 
+       border-radius: 5px;
+       text-align: right;
+     }
+
+   </style>
 </head>
 <body>
 
@@ -36,80 +97,53 @@
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="site-heading">
-            <h1>Productos</h1>
-            <span class="subheading">Contamos con una amplia variedad de productos para la salud de sus animales</span>
+            <h1>Servicios</h1>
+            <span class="subheading">En Veterinaria Victor's atendemos 
+              cualquier tipo de consultas desde razas grandes como animales de granja asi como 
+              razas pequeñas como mascotas.
+              Siempre atendiendolo con la mejor 
+              ética profecional</span>
           </div>
         </div>
       </div>
     </div>
     <section class="ProductsSection">
         <main class="mainDestacados">
-          <h2>Catalogo deproductos</h2>
-          <section class="containerProdutos">
-            <div class="produto">
-                <img src="images/Novidades/Novidade1.jpg" alt="" class="produto__img">
-              <div class="productDescription">
-                <h3 class="produto__title">Novidade 1</h3>
-                <spam class="produto__price">$90.00</spam>
+          <h2>Nuestros Servicios</h2>
+          <section class="containerServicios">
+            <div class="card-group">
+              <div class="card">
+                <img src="../../static/css/img/Consultaa.jpg" class="card-img-top" alt="Consulta">
+                <div class="card-body">
+                  <h5 class="card-title">Consulta</h5>
+                  <p class="card-text">Animales de granja
+                    Mascotas
+                  </p>
+    
+                </div>
               </div>
-              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-            </div>
-            <div class="produto">
-                <img src="images/Novidades/Novidade2.jpg" alt="" class="produto__img">
-              <div class="productDescription">
-                <h3 class="produto__title">Novidade 2</h3>
-                <spam class="produto__price">$90.00</spam>
+              <div class="card">
+                <img src="../../static/css/img/Cirugia.jpg" class="card-img-top" alt="Cirugia">
+                <div class="card-body">
+                  <h5 class="card-title">Cirugia</h5>
+                  <p class="card-text">Grastoctomia
+                    Esterilizacion canina y felina
+                    Orquiectomia
+                  </p>
+            
+                </div>
               </div>
-              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-            </div>
-            <div class="produto">
-                <img src="images/Novidades/Novidade3.jpg" alt="" class="produto__img">
-              <div class="productDescription">
-                <h3 class="produto__title">Novidade 3</h3>
-                <spam class="produto__price">$90.00</spam>
+              <div class="card">
+                <img src="../../static/css/img/parto.jpeg" class="card-img-top" alt="Clinica">
+                <div class="card-body">
+                  <h5 class="card-title">CLinica</h5>
+                  <p class="card-text">Parto</p>
+                  <p class="card-text">Manejo</p>
+                  <p class="card-text">Nutricion</p>
+              
+                </div>
               </div>
-              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
             </div>
-            <div class="produto">
-                <img src="images/Novidades/Novidade4.jpg" alt="" class="produto__img">
-             <div class="productDescription">
-              <h3 class="produto__title">Novidade 4</h3>
-              <spam class="produto__price">$90.00</spam>
-              </div>
-              <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-            </div>
-            <div class="produto">
-              <img src="images/Novidades/Novidade5.jpg" alt="" class="produto__img">
-            <div class="productDescription">
-              <h3 class="produto__title">Novidade 5</h3>
-              <spam class="produto__price">$90.00</spam>
-            </div>
-            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-          </div>
-          <div class="produto">
-              <img src="images/Novidades/Novidade6.jpg" alt="" class="produto__img">
-            <div class="productDescription">
-              <h3 class="produto__title">Novidade 6</h3>
-              <spam class="produto__price">$90.00</spam>
-            </div>
-            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-          </div>
-          <div class="produto">
-              <img src="images/Novidades/Novidade7.jpg" alt="" class="produto__img">
-            <div class="productDescription">
-              <h3 class="produto__title">Novidade 7</h3>
-              <spam class="produto__price">$90.00</spam>
-            </div>
-            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-          </div>
-          <div class="produto">
-              <img src="images/Novidades/Novidade8.jpg" alt="" class="produto__img">
-           <div class="productDescription">
-              <h3 class="produto__title">Novidade 8</h3>
-              <spam class="produto__price">$90.00</spam>
-            </div>
-            <a href=""><i class="produto__icon fas fa-cart-plus"></i></a>
-          </div>
           </section>
         </main>
       </section>
